[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecasting"
version = "0.1.0"
description = "Sales orders from supply chain graph"
requires-python = ">=3.10"
dependencies = [
    "torch-geometric>=2.7.0",
    "pyg-lib",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sales_forecasting*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
find-links = [{ url = 'https://data.pyg.org/whl/torch-2.8.0+cu128.html' }]

[tool.pixi.pypi-dependencies]
sales-forecasting = { path = ".", editable = true }
torch = { version = "==2.8.0", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = "*", index = "https://download.pytorch.org/whl/cu128" }
torch-geometric-temporal = { git = "https://github.com/benedekrozemberczki/pytorch_geometric_temporal.git" }

[tool.pixi.system-requirements]
cuda = "12.8"

[tool.pixi.dependencies]
python = "3.13.*"
pandas = ">=2.3.3,<3"
mlflow = ">=3.5.1,<4"
scikit-learn = ">=1.7.2,<2"

[tool.pixi.tasks]
train = { cmd = "python -m sales_forecasting.models.train" }
experiments = { cmd = "python -m sales_forecasting.experiments" }
process_data = { cmd = "python -m sales_forecasting.data.process_data" }
